--- a/package.json
+++ b/package.json
@@ -15,24 +15,27 @@
   "homepage": "http://skeg.me",
   "dependencies": {},
   "devDependencies": {
+    "adaptive-pixel-perfect": "^0.4.1",
     "browser-sync": "^2.0.0-rc4",
     "colors": "^1.1.2",
     "del": "^2.0.2",
     "fs": "0.0.1-security",
+    "ghpages": "0.0.10",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-clean-css": "^2.0.7",
     "gulp-concat": "^2.4.3",
     "gulp-data": "^1.2.1",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^2.1.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-plumber": "^0.6.6",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.0",
+    "gulp-responsive": "^2.7.1",
     "gulp-sass": "^2.3.1",
     "gulp-sass-lint": "1.0.1",
     "gulp-size": "^1.2.0",
