--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "colors": "^1.1.2",
     "del": "^2.0.2",
     "fs": "0.0.1-security",
-    "ghpages": "0.0.10",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-clean-css": "^2.0.7",
     "gulp-concat": "^2.4.3",
     "gulp-data": "^1.2.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^2.1.0",
+    "gulp-img-retina": "0.0.4",
     "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^2.2.0",
