--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-data": "^1.2.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^2.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^2.1.0",
     "gulp-img-retina": "0.0.4",
     "gulp-jshint": "^1.9.0",
@@ -43,6 +44,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^4.0.0",
     "run-sequence": "^1.1.4",
     "sassdoc": "^2.1.15",
