--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonnyonthe/sassy.git"
+    "url": "https://github.com/Jonnyonthe/port.git"
   },
   "homepage": "http://skeg.me",
   "dependencies": {},
