--- a/package.json
+++ b/package.json
@@ -16,35 +16,39 @@
   "dependencies": {},
   "devDependencies": {
     "adaptive-pixel-perfect": "^0.4.1",
-    "browser-sync": "^2.0.0-rc4",
-    "del": "^2.0.2",
-    "fs": "0.0.1-security",
+    "browser-sync": "^2.18.12",
+    "del": "^3.0.0",
+    "fs": "0.0.2",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-clean-css": "^2.0.7",
-    "gulp-concat": "^2.4.3",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.4.1",
+    "gulp-concat": "^2.6.1",
     "gulp-data": "^1.2.1",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-htmlmin": "^2.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^2.1.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-img-retina": "0.0.4",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-load-plugins": "^1.5.0",
     "gulp-nunjucks-render": "^2.2.1",
-    "gulp-plumber": "^0.6.6",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-responsive": "^2.7.1",
-    "gulp-sass": "^2.3.1",
-    "gulp-size": "^1.2.0",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-svg-sprite": "^1.3.7",
-    "gulp-uglify": "^1.0.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "imagemin-pngquant": "^4.0.0",
-    "run-sequence": "^1.1.4",
+    "imagemin-pngquant": "^5.0.1",
+    "jshint": "^2.9.4",
+    "run-sequence": "^1.2.2",
     "vinyl-paths": "^2.1.0"
+  },
+  "scripts": {
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
   },
   "optionalDependencies": {}
 }
