--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "browser-sync": "^2.18.12",
     "del": "^3.0.0",
     "fs": "0.0.2",
-    "gulp": "^3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.4.1",
     "gulp-concat": "^2.6.1",
